--- a/series.conf
+++ b/series.conf
@@ -15972,6 +15972,7 @@
 	patches.suse/KVM-Drop-superfluous-__KVM_VCPU_MULTIPLE_ADDRESS_SPACE-macro
 	patches.suse/KVM-Allow-arch-code-to-track-number-of-memslot-address-spaces-pe
 	patches.suse/KVM-x86-Add-support-for-protected-VMs-that-can-utilize-private-m
+	patches.suse/KVM-guest-memfd-fix-unused-function-warning
 	patches.suse/KVM-s390-vsie-Fix-STFLE-interpretive-execution-identification.patch
 	patches.suse/thermal-intel-hfi-Add-syscore-callbacks-for-system-w.patch
 	patches.suse/hwspinlock-qcom-Remove-IPQ6018-SOC-specific-compatib.patch
