--- a/series.conf
+++ b/series.conf
@@ -15956,6 +15956,7 @@
 	patches.suse/KVM-Use-gfn-instead-of-hva-for-mmu_notifier_retry
 	patches.suse/KVM-WARN-if-there-are-dangling-MMU-invalidations-at-VM-destructi
 	patches.suse/KVM-PPC-Drop-dead-code-related-to-KVM_ARCH_WANT_MMU_NOTIFIER
+	patches.suse/KVM-PPC-Return-1-unconditionally-for-KVM_CAP_SYNC_MMU
 	patches.suse/KVM-s390-vsie-Fix-STFLE-interpretive-execution-identification.patch
 	patches.suse/thermal-intel-hfi-Add-syscore-callbacks-for-system-w.patch
 	patches.suse/hwspinlock-qcom-Remove-IPQ6018-SOC-specific-compatib.patch
