--- a/series.conf
+++ b/series.conf
@@ -15968,6 +15968,7 @@
 	patches.suse/KVM-Add-KVM_CREATE_GUEST_MEMFD-ioctl-for-guest-specific-backing-
 	patches.suse/KVM-x86-Reset-vcpu-run-exit_reason-early-in-KVM_RUN
 	patches.suse/KVM-x86-Disallow-hugepages-when-memory-attributes-are-mixed
+	patches.suse/KVM-x86-mmu-Handle-page-fault-for-private-memory
 	patches.suse/KVM-s390-vsie-Fix-STFLE-interpretive-execution-identification.patch
 	patches.suse/thermal-intel-hfi-Add-syscore-callbacks-for-system-w.patch
 	patches.suse/hwspinlock-qcom-Remove-IPQ6018-SOC-specific-compatib.patch
