--- a/series.conf
+++ b/series.conf
@@ -15970,6 +15970,7 @@
 	patches.suse/KVM-x86-Disallow-hugepages-when-memory-attributes-are-mixed
 	patches.suse/KVM-x86-mmu-Handle-page-fault-for-private-memory
 	patches.suse/KVM-Drop-superfluous-__KVM_VCPU_MULTIPLE_ADDRESS_SPACE-macro
+	patches.suse/KVM-Allow-arch-code-to-track-number-of-memslot-address-spaces-pe
 	patches.suse/KVM-s390-vsie-Fix-STFLE-interpretive-execution-identification.patch
 	patches.suse/thermal-intel-hfi-Add-syscore-callbacks-for-system-w.patch
 	patches.suse/hwspinlock-qcom-Remove-IPQ6018-SOC-specific-compatib.patch
