--- a/series.conf
+++ b/series.conf
@@ -15966,6 +15966,7 @@
 	patches.suse/mm-Add-AS_UNMOVABLE-to-mark-mapping-as-completely-unmovable
 	patches.suse/fs-Rename-anon_inode_getfile_secure-and-anon_inode_getfd_secure
 	patches.suse/KVM-Add-KVM_CREATE_GUEST_MEMFD-ioctl-for-guest-specific-backing-
+	patches.suse/KVM-x86-Reset-vcpu-run-exit_reason-early-in-KVM_RUN
 	patches.suse/KVM-s390-vsie-Fix-STFLE-interpretive-execution-identification.patch
 	patches.suse/thermal-intel-hfi-Add-syscore-callbacks-for-system-w.patch
 	patches.suse/hwspinlock-qcom-Remove-IPQ6018-SOC-specific-compatib.patch
