--- a/series.conf
+++ b/series.conf
@@ -15963,6 +15963,7 @@
 	patches.suse/KVM-Add-a-dedicated-mmu_notifier-flag-for-reclaiming-freed-memor
 	patches.suse/KVM-Drop-.on_unlock-mmu_notifier-hook
 	patches.suse/KVM-Introduce-per-page-memory-attributes
+	patches.suse/mm-Add-AS_UNMOVABLE-to-mark-mapping-as-completely-unmovable
 	patches.suse/KVM-s390-vsie-Fix-STFLE-interpretive-execution-identification.patch
 	patches.suse/thermal-intel-hfi-Add-syscore-callbacks-for-system-w.patch
 	patches.suse/hwspinlock-qcom-Remove-IPQ6018-SOC-specific-compatib.patch
