--- a/series.conf
+++ b/series.conf
@@ -15964,6 +15964,7 @@
 	patches.suse/KVM-Drop-.on_unlock-mmu_notifier-hook
 	patches.suse/KVM-Introduce-per-page-memory-attributes
 	patches.suse/mm-Add-AS_UNMOVABLE-to-mark-mapping-as-completely-unmovable
+	patches.suse/fs-Rename-anon_inode_getfile_secure-and-anon_inode_getfd_secure
 	patches.suse/KVM-s390-vsie-Fix-STFLE-interpretive-execution-identification.patch
 	patches.suse/thermal-intel-hfi-Add-syscore-callbacks-for-system-w.patch
 	patches.suse/hwspinlock-qcom-Remove-IPQ6018-SOC-specific-compatib.patch
