--- a/series.conf
+++ b/series.conf
@@ -15954,6 +15954,7 @@
 	patches.suse/KVM-Tweak-kvm_hva_range-and-hva_handler_t-to-allow-reusing-for-g
 	patches.suse/KVM-Assert-that-mmu_invalidate_in_progress-never-goes-negative
 	patches.suse/KVM-Use-gfn-instead-of-hva-for-mmu_notifier_retry
+	patches.suse/KVM-WARN-if-there-are-dangling-MMU-invalidations-at-VM-destructi
 	patches.suse/KVM-s390-vsie-Fix-STFLE-interpretive-execution-identification.patch
 	patches.suse/thermal-intel-hfi-Add-syscore-callbacks-for-system-w.patch
 	patches.suse/hwspinlock-qcom-Remove-IPQ6018-SOC-specific-compatib.patch
