--- a/series.conf
+++ b/series.conf
@@ -15951,6 +15951,7 @@
 	patches.suse/ubifs-Check-c-dirty_-n-p-n_cnt-and-c-nroot-state-under-c-lp_mutex.patch
 	patches.suse/ubifs-ubifs_symlink-Fix-memleak-of-inode-i_link-in-error-path.patch
 	patches.suse/ARM-9330-1-davinci-also-select-PINCTRL.patch
+	patches.suse/KVM-Tweak-kvm_hva_range-and-hva_handler_t-to-allow-reusing-for-g
 	patches.suse/KVM-s390-vsie-Fix-STFLE-interpretive-execution-identification.patch
 	patches.suse/thermal-intel-hfi-Add-syscore-callbacks-for-system-w.patch
 	patches.suse/hwspinlock-qcom-Remove-IPQ6018-SOC-specific-compatib.patch
