--- a/series.conf
+++ b/series.conf
@@ -15953,6 +15953,7 @@
 	patches.suse/ARM-9330-1-davinci-also-select-PINCTRL.patch
 	patches.suse/KVM-Tweak-kvm_hva_range-and-hva_handler_t-to-allow-reusing-for-g
 	patches.suse/KVM-Assert-that-mmu_invalidate_in_progress-never-goes-negative
+	patches.suse/KVM-Use-gfn-instead-of-hva-for-mmu_notifier_retry
 	patches.suse/KVM-s390-vsie-Fix-STFLE-interpretive-execution-identification.patch
 	patches.suse/thermal-intel-hfi-Add-syscore-callbacks-for-system-w.patch
 	patches.suse/hwspinlock-qcom-Remove-IPQ6018-SOC-specific-compatib.patch
