--- a/series.conf
+++ b/series.conf
@@ -15969,6 +15969,7 @@
 	patches.suse/KVM-x86-Reset-vcpu-run-exit_reason-early-in-KVM_RUN
 	patches.suse/KVM-x86-Disallow-hugepages-when-memory-attributes-are-mixed
 	patches.suse/KVM-x86-mmu-Handle-page-fault-for-private-memory
+	patches.suse/KVM-Drop-superfluous-__KVM_VCPU_MULTIPLE_ADDRESS_SPACE-macro
 	patches.suse/KVM-s390-vsie-Fix-STFLE-interpretive-execution-identification.patch
 	patches.suse/thermal-intel-hfi-Add-syscore-callbacks-for-system-w.patch
 	patches.suse/hwspinlock-qcom-Remove-IPQ6018-SOC-specific-compatib.patch
