--- a/series.conf
+++ b/series.conf
@@ -15960,6 +15960,7 @@
 	patches.suse/KVM-Convert-KVM_ARCH_WANT_MMU_NOTIFIER-to-CONFIG_KVM_GENERIC_MMU
 	patches.suse/KVM-Introduce-KVM_SET_USER_MEMORY_REGION2
 	patches.suse/KVM-Add-KVM_EXIT_MEMORY_FAULT-exit-to-report-faults-to-userspace
+	patches.suse/KVM-Add-a-dedicated-mmu_notifier-flag-for-reclaiming-freed-memor
 	patches.suse/KVM-s390-vsie-Fix-STFLE-interpretive-execution-identification.patch
 	patches.suse/thermal-intel-hfi-Add-syscore-callbacks-for-system-w.patch
 	patches.suse/hwspinlock-qcom-Remove-IPQ6018-SOC-specific-compatib.patch
