--- a/series.conf
+++ b/series.conf
@@ -15958,6 +15958,7 @@
 	patches.suse/KVM-PPC-Drop-dead-code-related-to-KVM_ARCH_WANT_MMU_NOTIFIER
 	patches.suse/KVM-PPC-Return-1-unconditionally-for-KVM_CAP_SYNC_MMU
 	patches.suse/KVM-Convert-KVM_ARCH_WANT_MMU_NOTIFIER-to-CONFIG_KVM_GENERIC_MMU
+	patches.suse/KVM-Introduce-KVM_SET_USER_MEMORY_REGION2
 	patches.suse/KVM-s390-vsie-Fix-STFLE-interpretive-execution-identification.patch
 	patches.suse/thermal-intel-hfi-Add-syscore-callbacks-for-system-w.patch
 	patches.suse/hwspinlock-qcom-Remove-IPQ6018-SOC-specific-compatib.patch
