--- a/series.conf
+++ b/series.conf
@@ -15732,6 +15732,7 @@
 	patches.suse/platform-x86-intel-uncore-freq-Fix-types-in-sysfs-ca.patch
 	patches.suse/platform-x86-intel-ifs-Call-release_firmware-when-ha.patch
 	patches.suse/clocksource-Skip-watchdog-check-for-large-watchdog-i.patch
+	patches.suse/tick-sched-Preserve-number-of-idle-sleeps-across-CPU.patch
 	patches.suse/genirq-Initialize-resend_node-hlist-for-all-interrup.patch
 	patches.suse/cxl-region-Fix-overflow-issue-in-alloc_hpa.patch
 	patches.suse/tracing-trigger-Fix-to-return-error-if-failed-to-alloc-snapshot.patch
