--- a/series.conf
+++ b/series.conf
@@ -18043,6 +18043,7 @@
 	patches.suse/IB-rdmavt-Validate-remote_addr-during-loopback-atomi.patch
 	patches.suse/RDMA-siw-Fix-broken-RDMA-Read-Fence-Resume-logic.patch
 	patches.suse/RDMA-mlx4-Don-t-continue-event-handler-after-memory-.patch
+	patches.suse/vfs-make-freeze_super-abort-when-sync_filesystem-returns-error.patch
 	patches.suse/vfs-make-sync_filesystem-return-errors-from-sync_fs.patch
 	patches.suse/xfs-return-errors-in-xfs_fs_sync_fs.patch
 	patches.suse/xfs-reject-crazy-array-sizes-being-fed-to-XFS_IOC_GE.patch
