--- a/series.conf
+++ b/series.conf
@@ -30316,6 +30316,7 @@
 	patches.suse/lkdtm-disable-return-thunks-in-rodata-c.patch
 	patches.suse/sched-deadline-Fix-BUG_ON-condition-for-deboosted-ta.patch
 	patches.suse/perf-x86-intel-lbr-Fix-unchecked-MSR-access-error-on-HSW.patch
+	patches.suse/fs-sendfile-handles-O_NONBLOCK-of-out_fd.patch
 	patches.suse/asm-generic-remove-a-broken-and-needless-ifdef-condi.patch
 	patches.suse/watch_queue-Fix-missing-rcu-annotation.patch
 	patches.suse/watch_queue-Fix-missing-locking-in-add_watch_to_obje.patch
