--- a/series.conf
+++ b/series.conf
@@ -40322,6 +40322,7 @@
 	patches.suse/soundwire-cadence-Don-t-overflow-the-command-FIFOs.patch
 	patches.suse/soundwire-cadence-Drain-the-RX-FIFO-after-an-IO-time.patch
 	patches.suse/soundwire-bus_type-Avoid-lockdep-assert-in-sdw_drv_p.patch
+	patches.suse/nsfs-add-compat-ioctl-handler.patch
 	patches.suse/x86-tdx-Fix-typo-in-comment-in-__tdx_hypercall.patch
 	patches.suse/x86-tdx-Add-more-registers-to-struct-tdx_hypercall_a.patch
 	patches.suse/x86-tdx-Refactor-__tdx_hypercall-to-allow-pass-down-.patch
