--- a/series.conf
+++ b/series.conf
@@ -42662,6 +42662,7 @@
 	patches.suse/extcon-usbc-tusb320-Unregister-typec-port-on-driver-.patch
 	patches.suse/extcon-Fix-kernel-doc-of-property-fields-to-avoid-wa.patch
 	patches.suse/extcon-Fix-kernel-doc-of-property-capability-fields-.patch
+	patches.suse/kernfs-fix-missing-kernfs_idr_lock-to-remove-an-ID-from-the-IDR.patch
 	patches.suse/serial-8250-omap-Fix-freeing-of-resources-on-failed-.patch
 	patches.suse/serial-8250-lock-port-for-stop_rx-in-omap8250_irq.patch
 	patches.suse/serial-8250-lock-port-for-UART_IER-access-in-omap825.patch
