--- a/series.conf
+++ b/series.conf
@@ -44850,6 +44850,7 @@
 	patches.suse/ACPI-LPSS-Fix-the-fractional-clock-divider-flags.patch
 	patches.suse/PM-hibernate-Enforce-ordering-during-image-compressi.patch
 	patches.suse/ipmi-Use-regspacings-passed-as-a-module-parameter.patch
+	patches.suse/fs-indicate-request-originates-from-old-mount-API.patch
 	patches.suse/gfs2-Fix-kernel-NULL-pointer-dereference-in-gfs2_rgrp_dump.patch
 	patches.suse/pstore-ram_core-fix-possible-overflow-in-persistent_.patch
 	patches.suse/crypto-sa2ul-Return-crypto_aead_setkey-to-transfer-t.patch
