--- a/series.conf
+++ b/series.conf
@@ -11346,6 +11346,7 @@
 	patches.suse/1314-drm-i915-gt-Fix-reservation-address-in-ggtt_reserve_.patch
 	patches.suse/1315-i915-guc-Get-runtime-pm-in-busyness-worker-only-if-a.patch
 	patches.suse/mm-slab_common-fix-slab_caches-list-corruption-after-kmem_cache_destroy.patch
+	patches.suse/slab-kmalloc_size_roundup-must-not-return-0-for-non-zero-size.patch
 	patches.suse/io_uring-fs-remove-sqe-rw_flags-checking-from-LINKAT.patch
 	patches.suse/block-correct-stale-comment-in-rq_qos_wait.patch
 	patches.suse/block-fix-kernel-doc-for-disk_force_media_change.patch
