--- a/series.conf
+++ b/series.conf
@@ -11395,6 +11395,7 @@
 	patches.suse/misc-rtsx-Fix-some-platforms-can-not-boot-and-move-t.patch
 	patches.suse/nilfs2-fix-potential-use-after-free-in-nilfs_gccache.patch
 	patches.suse/mm-memcg-reconsider-kmem.limit_in_bytes-deprecation.patch
+	patches.suse/mm-mempolicy-keep-VMA-walk-if-both-MPOL_MF_STRICT-and-MPOL_MF_MOVE-are-specified.patch
 	patches.suse/selftests-mm-fix-awk-usage-in-charge_reserved_hugetl.patch
 	patches.suse/0001-Crash-add-lock-to-serialize-crash-hotplug-handling.patch
 	patches.suse/modpost-add-missing-else-to-the-of-check.patch
