--- a/series.conf
+++ b/series.conf
@@ -11893,6 +11893,7 @@
 	patches.suse/virtio_pci-fix-the-common-cfg-map-size.patch
 	patches.suse/mm-page_alloc-correct-start-page-when-guard-page-debug-is-enabled.patch
 	patches.suse/mm-migrate-fix-do_pages_move-for-compat-pointers.patch
+	patches.suse/mm-zswap-fix-pool-refcount-bug-around-shrink_worker.patch
 	patches.suse/maple_tree-add-GFP_KERNEL-to-allocations-in-mas_expe.patch
 	patches.suse/ACPI-NFIT-Install-Notify-handler-before-getting-NFIT-9b311b73.patch
 	patches.suse/i40e-xsk-remove-count_mask.patch
