--- a/series.conf
+++ b/series.conf
@@ -13234,6 +13234,7 @@
 	patches.suse/mm-compaction-improve-comment-of-is_via_compact_memory.patch
 	patches.suse/mm-compaction-factor-out-code-to-test-if-we-should-run-compaction-for-target-order.patch
 	patches.suse/mm-mremap-fix-unaccount-of-memory-on-vma_merge-failure.patch
+	patches.suse/mm-fix-unaccount-of-memory-on-vma_link-failure.patch
 	patches.suse/kselftest-vm-fix-mdwe-s-mmap_FIXED-test-case.patch
 	patches.suse/mm-make-PR_MDWE_REFUSE_EXEC_GAIN-an-unsigned-long.patch
 	patches.suse/selftests-clone3-Fix-broken-test-under-CONFIG_TIME_N.patch
