--- a/series.conf
+++ b/series.conf
@@ -13831,6 +13831,7 @@
 	patches.suse/drm-amd-display-Clear-dpcd_sink_ext_caps-if-not-set.patch
 	patches.suse/drm-amd-display-Change-the-DMCUB-mailbox-memory-loca.patch
 	patches.suse/io_uring-fdinfo-remove-need-for-sqpoll-lock-for-thre.patch
+	patches.suse/mm-fix-for-negative-counter-nr_file_hugepages.patch
 	patches.suse/mm-kmem-drop-__GFP_NOFAIL-when-allocating-objcg-vectors.patch
 	patches.suse/tools-power-turbostat-Fix-failure-with-new-uncore-sy.patch
 	patches.suse/tools-power-turbostat-Fix-a-knl-bug.patch
