--- a/series.conf
+++ b/series.conf
@@ -14410,6 +14410,7 @@
 	patches.suse/ALSA-hda-tas2781-call-cleanup-functions-only-once.patch
 	patches.suse/ALSA-hda-tas2781-reset-the-amp-before-component_add.patch
 	patches.suse/kexec-drop-dependency-on-ARCH_SUPPORTS_KEXEC-from-CR.patch
+	patches.suse/mm-shmem-fix-race-in-shmem_undo_range-w-THP.patch
 	patches.suse/io_uring-poll-don-t-enable-lazy-wake-for-POLLEXCLUSI.patch
 	patches.suse/PCI-loongson-Limit-MRRS-to-256.patch
 	patches.suse/PCI-ASPM-Add-pci_enable_link_state_locked.patch
