--- a/series.conf
+++ b/series.conf
@@ -14674,6 +14674,7 @@
 	patches.suse/mmc-core-Cancel-delayed-work-before-releasing-host.patch
 	patches.suse/mmc-sdhci-sprd-Fix-eMMC-init-failure-after-hw-reset.patch
 	patches.suse/firewire-ohci-suppress-unexpected-system-reboot-in-A.patch
+	patches.suse/mm-fix-unmap_mapping_range-high-bits-shift-bug.patch
 	patches.suse/i2c-core-Fix-atomic-xfer-check-for-non-preempt-confi.patch
 	patches.suse/userns-eliminate-many-kernel-doc-warnings.patch
 	patches.suse/EDAC-thunderx-Fix-possible-out-of-bounds-string-acce.patch
