--- a/series.conf
+++ b/series.conf
@@ -14731,6 +14731,7 @@
 	patches.suse/dax-kmem-allow-kmem-to-add-memory-with-memmap_on_mem-4eca.patch
 	patches.suse/mm-page_alloc-correct-high-atomic-reserve-calculations.patch
 	patches.suse/mm-page_alloc-enforce-minimum-zone-size-to-do-high-atomic-reserves.patch
+	patches.suse/mm-page_alloc-unreserve-highatomic-page-blocks-before-oom.patch
 	patches.suse/selftests-mm-dont-run-ksm_functional_tests-twice.patch
 	patches.suse/x86-sta2x11-include-header-for-sta2x11_get_instance-protot.patch
 	patches.suse/usb-fsl-mph-dr-of-mark-fsl_usb2_mpc5121_init-static.patch
