--- a/series.conf
+++ b/series.conf
@@ -13243,6 +13243,7 @@
 	patches.suse/kasan-use-unchecked-__memset-internally.patch
 	patches.suse/mm-page_alloc-remove-unnecessary-check-in-break_down_buddy_pages.patch
 	patches.suse/mm-page_alloc-remove-unnecessary-next_page-in-break_down_buddy_pages.patch
+	patches.suse/mm-migrate-record-the-mlocked-page-status-to-remove-unnecessary-lru-drain.patch
 	patches.suse/scripts-gdb-fix-usage-of-MOD_TEXT-not-defined-when-C.patch
 	patches.suse/buildid-reduce-header-file-dependencies-for-module.patch
 	patches.suse/verification-dot2k-Delete-duplicate-imports.patch
