--- a/series.conf
+++ b/series.conf
@@ -14735,6 +14735,7 @@
 	patches.suse/mm-page_alloc-unreserve-highatomic-page-blocks-before-oom.patch
 	patches.suse/mm-gup-fix-follow_devmap_p-mu-d-on-page-NULL-handling.patch
 	patches.suse/selftests-mm-dont-run-ksm_functional_tests-twice.patch
+	patches.suse/mm-migrate-fix-getting-incorrect-page-mapping-during-page-migration.patch
 	patches.suse/x86-sta2x11-include-header-for-sta2x11_get_instance-protot.patch
 	patches.suse/usb-fsl-mph-dr-of-mark-fsl_usb2_mpc5121_init-static.patch
 	patches.suse/usr-Kconfig-fix-typos-of-its.patch
