--- a/series.conf
+++ b/series.conf
@@ -45135,6 +45135,9 @@
 	patches.suse/serial-max310x-fail-probe-if-clock-crystal-is-unstab.patch
 	patches.suse/misc-fastrpc-Mark-all-sessions-as-invalid-in-cb_remo.patch
 
+	# ras/ras edac-for-next
+	patches.suse/RAS-Introduce-AMD-Address-Translation-Library.patch
+
 	# out-of-tree patches
 	patches.suse/cifs-Fix-UAF-in-cifs_demultiplex_thread-.patch
 
