--- a/series.conf
+++ b/series.conf
@@ -16431,6 +16431,7 @@
 	# ras/ras edac-for-next
 	patches.suse/RAS-Introduce-AMD-Address-Translation-Library.patch
 	patches.suse/EDAC-amd64-Use-new-AMD-Address-Translation-Library.patch
+	patches.suse/Documentation-RAS-Add-index-and-address-translation-sectio.patch
 
 	# out-of-tree patches
 	patches.suse/sync-tools-arch-header-for-support-branch-counters-logging.patch
