--- a/series.conf
+++ b/series.conf
@@ -45140,6 +45140,7 @@
 	patches.suse/EDAC-amd64-Use-new-AMD-Address-Translation-Library.patch
 	patches.suse/Documentation-RAS-Add-index-and-address-translation-sectio.patch
 	patches.suse/RAS-AMD-ATL-Add-MI300-support.patch
+	patches.suse/RAS-AMD-ATL-Fix-array-overflow-in-get_logical_coh_st_fabri.patch
 
 	# out-of-tree patches
 	patches.suse/cifs-Fix-UAF-in-cifs_demultiplex_thread-.patch
