--- a/series.conf
+++ b/series.conf
@@ -14384,6 +14384,7 @@
 	patches.suse/ice-unify-logic-for-programming-PFINT_TSYN_MSK.patch
 	patches.suse/ice-restore-timestamp-configuration-after-device-res.patch
 	patches.suse/i40e-Fix-adding-unsupported-cloud-filters.patch
+	patches.suse/net-axienet-Fix-check-for-partial-TX-checksum.patch
 	patches.suse/tls-fix-NULL-deref-on-tls_sw_splice_eof-with-empty-r.patch
 	patches.suse/tools-ynl-fix-duplicate-op-name-in-devlink.patch
 	patches.suse/HID-mcp2221-Set-driver-data-before-I2C-adapter-add.patch
