--- a/series.conf
+++ b/series.conf
@@ -43159,6 +43159,7 @@
 	patches.suse/x86-cpu-amd-enable-zenbleed-fix-for-amd-custom-apu-0405.patch
 	patches.suse/usb-typec-tcpm-Fix-response-to-vsafe0V-event.patch
 	patches.suse/usb-typec-altmodes-displayport-Signal-hpd-when-confi.patch
+	patches.suse/USB-Gadget-core-Help-prevent-panic-during-UVC-unconf.patch
 	patches.suse/usb-common-usb-conn-gpio-Prevent-bailing-out-if-init.patch
 	patches.suse/usb-storage-alauda-Fix-uninit-value-in-alauda_check_.patch
 	patches.suse/usb-dwc3-Properly-handle-processing-of-pending-event.patch
