--- a/series.conf
+++ b/series.conf
@@ -43521,6 +43521,7 @@
 	patches.suse/NFSv4.2-fix-handling-of-COPY-ERR_OFFLOAD_NO_REQ.patch
 	patches.suse/pNFS-Fix-assignment-of-xprtdata.cred.patch
 	patches.suse/platform-x86-dell-sysman-Fix-reference-leak.patch
+	patches.suse/usb-cdns3-Put-the-cdns-set-active-part-outside-the-s.patch
 	patches.suse/usb-gadget-fsl_qe_udc-validate-endpoint-index-for-ch.patch
 	patches.suse/usb-chipidea-imx-improve-logic-if-samsung-picophy-pa.patch
 	patches.suse/usb-phy-mxs-fix-getting-wrong-state-with-mxs_phy_is_.patch
