--- a/series.conf
+++ b/series.conf
@@ -14490,6 +14490,7 @@
 	patches.suse/net-rswitch-Fix-return-value-in-rswitch_start_xmit.patch
 	patches.suse/net-rswitch-Fix-missing-dev_kfree_skb_any-in-error-p.patch
 	patches.suse/ipv4-igmp-fix-refcnt-uaf-issue-when-receiving-igmp-q.patch
+	patches.suse/dpaa2-eth-increase-the-needed-headroom-to-account-fo.patch
 	patches.suse/selftests-net-ipsec-fix-constant-out-of-range.patch
 	patches.suse/selftests-net-fix-a-char-signedness-issue.patch
 	patches.suse/selftests-net-unix-fix-unused-variable-compiler-warn.patch
