--- a/series.conf
+++ b/series.conf
@@ -16064,6 +16064,7 @@
 	patches.suse/KVM-x86-Add-use-kvm_vcpu_is_legal_cr3-to-check-CR3-s.patch
 	patches.suse/KVM-x86-Remove-kvm_vcpu_is_illegal_gpa.patch
 	patches.suse/KVM-x86-Introduce-get_untagged_addr-in-kvm_x86_ops-a.patch
+	patches.suse/KVM-x86-Untag-addresses-for-LAM-emulation-where-appl.patch
 	patches.suse/x86-kvm-Do-not-try-to-disable-kvmclock-if-it-was-not-enabl.patch
 	patches.suse/thermal-intel-hfi-Add-syscore-callbacks-for-system-w.patch
 	patches.suse/hwspinlock-qcom-Remove-IPQ6018-SOC-specific-compatib.patch
