--- a/series.conf
+++ b/series.conf
@@ -16309,6 +16309,7 @@
 	patches.suse/perf-docs-Fix-man-page-formatting-for-perf-lock.patch
 	patches.suse/perf-test-record-user-regs-Fix-mask-for-vg-register.patch
 	patches.suse/perf-vendor-events-arm64-AmpereOne-Rename-BPU_FLUSH_MEM_FAULT-to-GPC_FLUSH_MEM_FAULT.patch
+	patches.suse/perf-vendor-events-arm64-AmpereOneX-Add-core-PMU-events-and-metrics.patch
 	patches.suse/perf-vendor-events-powerpc-Update-datasource-event-name-to-fix-duplicate-events.patch
 	patches.suse/perf-mem-Fix-error-on-hybrid-related-to-availability-of-mem-event-in-a-PMU.patch
 	patches.suse/perf-stat-Exit-perf-stat-if-parse-groups-fails.patch
