--- a/series.conf
+++ b/series.conf
@@ -16067,6 +16067,7 @@
 	patches.suse/KVM-x86-Untag-addresses-for-LAM-emulation-where-appl.patch
 	patches.suse/KVM-x86-Virtualize-LAM-for-supervisor-pointer.patch
 	patches.suse/KVM-x86-Virtualize-LAM-for-user-pointer.patch
+	patches.suse/KVM-x86-Advertise-and-enable-LAM-user-and-supervisor.patch
 	patches.suse/x86-kvm-Do-not-try-to-disable-kvmclock-if-it-was-not-enabl.patch
 	patches.suse/thermal-intel-hfi-Add-syscore-callbacks-for-system-w.patch
 	patches.suse/hwspinlock-qcom-Remove-IPQ6018-SOC-specific-compatib.patch
