--- a/series.conf
+++ b/series.conf
@@ -7053,6 +7053,7 @@
 	patches.suse/x86-cpu-Fix-Gracemont-uarch.patch
 	patches.suse/x86-cpu-Fix-Crestmont-uarch.patch
 	patches.suse/perf-x86-intel-Add-Crestmont-PMU.patch
+	patches.suse/kernel-fork-beware-of-__put_task_struct-calling-context.patch
 	patches.suse/sched-don-t-account-throttle-time-for-empty-groups.patch
 	patches.suse/sched-add-throttled-time-stat-for-throttled-children.patch
 	patches.suse/sched-core-introduce-sched_core_idle_cpu.patch
