--- a/series.conf
+++ b/series.conf
@@ -16405,6 +16405,7 @@
 	patches.suse/tick-sched-Preserve-number-of-idle-sleeps-across-CPU.patch
 	patches.suse/genirq-Initialize-resend_node-hlist-for-all-interrup.patch
 	patches.suse/cxl-region-Fix-overflow-issue-in-alloc_hpa.patch
+	patches.suse/mm-memcontrol-don-t-throttle-dying-tasks-on-memory.high.patch
 	patches.suse/mm-writeback-fix-possible-divide-by-zero-in-wb_dirty_limits-again.patch
 	patches.suse/tracing-trigger-Fix-to-return-error-if-failed-to-alloc-snapshot.patch
 	patches.suse/msft-hv-2939-scsi-storvsc-Fix-ring-buffer-size-calculation.patch
