--- a/series.conf
+++ b/series.conf
@@ -16058,6 +16058,7 @@
 	patches.suse/KVM-s390-vsie-Fix-STFLE-interpretive-execution-identification.patch
 	patches.suse/KVM-x86-add-missing-depends-on-KVM
 	patches.suse/KVM-x86-mmu-Declare-flush_remote_tlbs-_range-hooks-i.patch
+	patches.suse/KVM-x86-Turn-off-KVM_WERROR-by-default-for-all-confi.patch
 	patches.suse/KVM-x86-Consolidate-flags-for-__linearize.patch
 	patches.suse/KVM-x86-Add-an-emulation-flag-for-implicit-system-ac.patch
 	patches.suse/KVM-x86-Add-X86EMUL_F_INVLPG-and-pass-it-in-em_invlp.patch
