--- a/series.conf
+++ b/series.conf
@@ -16059,6 +16059,7 @@
 	patches.suse/KVM-x86-add-missing-depends-on-KVM
 	patches.suse/KVM-x86-mmu-Declare-flush_remote_tlbs-_range-hooks-i.patch
 	patches.suse/KVM-x86-Turn-off-KVM_WERROR-by-default-for-all-confi.patch
+	patches.suse/KVM-x86-Advertise-CPUID.-EAX-7-ECX-2-EDX-5-0-to-user.patch
 	patches.suse/KVM-x86-Consolidate-flags-for-__linearize.patch
 	patches.suse/KVM-x86-Add-an-emulation-flag-for-implicit-system-ac.patch
 	patches.suse/KVM-x86-Add-X86EMUL_F_INVLPG-and-pass-it-in-em_invlp.patch
