--- a/series.conf
+++ b/series.conf
@@ -16061,6 +16061,7 @@
 	patches.suse/KVM-x86-Turn-off-KVM_WERROR-by-default-for-all-confi.patch
 	patches.suse/KVM-x86-Advertise-CPUID.-EAX-7-ECX-2-EDX-5-0-to-user.patch
 	patches.suse/KVM-x86-Use-a-switch-statement-and-macros-in-__featu.patch
+	patches.suse/KVM-x86-Don-t-unnecessarily-force-masterclock-update.patch
 	patches.suse/KVM-x86-Consolidate-flags-for-__linearize.patch
 	patches.suse/KVM-x86-Add-an-emulation-flag-for-implicit-system-ac.patch
 	patches.suse/KVM-x86-Add-X86EMUL_F_INVLPG-and-pass-it-in-em_invlp.patch
