--- a/series.conf
+++ b/series.conf
@@ -16074,6 +16074,7 @@
 	patches.suse/KVM-x86-Virtualize-LAM-for-user-pointer.patch
 	patches.suse/KVM-x86-Advertise-and-enable-LAM-user-and-supervisor.patch
 	patches.suse/KVM-x86-Use-KVM-governed-feature-framework-to-track--183bdd161c2b.patch
+	patches.suse/Revert-nSVM-Check-for-reserved-encodings-of-TLB_CONT.patch
 	patches.suse/x86-kvm-Do-not-try-to-disable-kvmclock-if-it-was-not-enabl.patch
 	patches.suse/thermal-intel-hfi-Add-syscore-callbacks-for-system-w.patch
 	patches.suse/hwspinlock-qcom-Remove-IPQ6018-SOC-specific-compatib.patch
