--- a/series.conf
+++ b/series.conf
@@ -16076,6 +16076,7 @@
 	patches.suse/KVM-x86-Use-KVM-governed-feature-framework-to-track--183bdd161c2b.patch
 	patches.suse/Revert-nSVM-Check-for-reserved-encodings-of-TLB_CONT.patch
 	patches.suse/KVM-nSVM-Advertise-support-for-flush-by-ASID.patch
+	patches.suse/KVM-SVM-Explicitly-require-FLUSHBYASID-to-enable-SEV.patch
 	patches.suse/x86-kvm-Do-not-try-to-disable-kvmclock-if-it-was-not-enabl.patch
 	patches.suse/thermal-intel-hfi-Add-syscore-callbacks-for-system-w.patch
 	patches.suse/hwspinlock-qcom-Remove-IPQ6018-SOC-specific-compatib.patch
