--- a/series.conf
+++ b/series.conf
@@ -16068,6 +16068,7 @@
 	patches.suse/KVM-x86-pmu-Stop-calling-kvm_pmu_reset-at-RESET-it-s.patch
 	patches.suse/KVM-x86-pmu-Remove-manual-clearing-of-fields-in-kvm_.patch
 	patches.suse/KVM-x86-pmu-Update-sample-period-in-pmc_write_counte.patch
+	patches.suse/KVM-x86-pmu-Track-emulated-counter-events-instead-of.patch
 	patches.suse/KVM-x86-Consolidate-flags-for-__linearize.patch
 	patches.suse/KVM-x86-Add-an-emulation-flag-for-implicit-system-ac.patch
 	patches.suse/KVM-x86-Add-X86EMUL_F_INVLPG-and-pass-it-in-em_invlp.patch
