--- a/series.conf
+++ b/series.conf
@@ -16057,6 +16057,7 @@
 	patches.suse/KVM-guest-memfd-fix-unused-function-warning
 	patches.suse/KVM-s390-vsie-Fix-STFLE-interpretive-execution-identification.patch
 	patches.suse/KVM-x86-add-missing-depends-on-KVM
+	patches.suse/KVM-x86-Harden-copying-of-userspace-array-against-ov.patch
 	patches.suse/KVM-x86-mmu-Declare-flush_remote_tlbs-_range-hooks-i.patch
 	patches.suse/KVM-x86-Turn-off-KVM_WERROR-by-default-for-all-confi.patch
 	patches.suse/KVM-x86-Advertise-CPUID.-EAX-7-ECX-2-EDX-5-0-to-user.patch
