--- a/series.conf
+++ b/series.conf
@@ -16086,6 +16086,7 @@
 	patches.suse/KVM-nSVM-Advertise-support-for-flush-by-ASID.patch
 	patches.suse/KVM-SVM-Explicitly-require-FLUSHBYASID-to-enable-SEV.patch
 	patches.suse/KVM-SVM-Don-t-intercept-IRET-when-injecting-NMI-and-.patch
+	patches.suse/KVM-x86-mmu-Fix-off-by-1-when-splitting-huge-pages-d.patch
 	patches.suse/x86-kvm-Do-not-try-to-disable-kvmclock-if-it-was-not-enabl.patch
 	patches.suse/thermal-intel-hfi-Add-syscore-callbacks-for-system-w.patch
 	patches.suse/hwspinlock-qcom-Remove-IPQ6018-SOC-specific-compatib.patch
