--- a/series.conf
+++ b/series.conf
@@ -16088,6 +16088,7 @@
 	patches.suse/KVM-SVM-Don-t-intercept-IRET-when-injecting-NMI-and-.patch
 	patches.suse/KVM-x86-mmu-Fix-off-by-1-when-splitting-huge-pages-d.patch
 	patches.suse/KVM-x86-mmu-Check-for-leaf-SPTE-when-clearing-dirty-.patch
+	patches.suse/KVM-x86-mmu-remove-unnecessary-bool-shared-argument-0.patch
 	patches.suse/x86-kvm-Do-not-try-to-disable-kvmclock-if-it-was-not-enabl.patch
 	patches.suse/thermal-intel-hfi-Add-syscore-callbacks-for-system-w.patch
 	patches.suse/hwspinlock-qcom-Remove-IPQ6018-SOC-specific-compatib.patch
