--- a/series.conf
+++ b/series.conf
@@ -16091,6 +16091,7 @@
 	patches.suse/KVM-x86-mmu-remove-unnecessary-bool-shared-argument-0.patch
 	patches.suse/KVM-x86-mmu-remove-unnecessary-bool-shared-argument-.patch
 	patches.suse/KVM-x86-mmu-always-take-tdp_mmu_pages_lock.patch
+	patches.suse/KVM-x86-mmu-fix-comment-about-mmu_unsync_pages_lock.patch
 	patches.suse/x86-kvm-Do-not-try-to-disable-kvmclock-if-it-was-not-enabl.patch
 	patches.suse/thermal-intel-hfi-Add-syscore-callbacks-for-system-w.patch
 	patches.suse/hwspinlock-qcom-Remove-IPQ6018-SOC-specific-compatib.patch
