--- a/series.conf
+++ b/series.conf
@@ -16060,6 +16060,7 @@
 	patches.suse/KVM-x86-Harden-copying-of-userspace-array-against-ov.patch
 	patches.suse/KVM-x86-mmu-Declare-flush_remote_tlbs-_range-hooks-i.patch
 	patches.suse/KVM-x86-xen-Remove-unneeded-xen-context-from-kvm_arc.patch
+	patches.suse/KVM-x86-Move-Hyper-V-partition-assist-page-out-of-Hy.patch
 	patches.suse/KVM-x86-Turn-off-KVM_WERROR-by-default-for-all-confi.patch
 	patches.suse/KVM-x86-Advertise-CPUID.-EAX-7-ECX-2-EDX-5-0-to-user.patch
 	patches.suse/KVM-x86-Use-a-switch-statement-and-macros-in-__featu.patch
