--- a/series.conf
+++ b/series.conf
@@ -16068,6 +16068,7 @@
 	patches.suse/KVM-x86-Introduce-helper-to-handle-Hyper-V-paravirt-.patch
 	patches.suse/KVM-nVMX-Split-off-helper-for-emulating-VMCLEAR-on-H.patch
 	patches.suse/KVM-nVMX-Move-guest_cpuid_has_evmcs-to-hyperv.h.patch
+	patches.suse/KVM-x86-Make-Hyper-V-emulation-optional.patch
 	patches.suse/KVM-x86-Turn-off-KVM_WERROR-by-default-for-all-confi.patch
 	patches.suse/KVM-x86-Advertise-CPUID.-EAX-7-ECX-2-EDX-5-0-to-user.patch
 	patches.suse/KVM-x86-Use-a-switch-statement-and-macros-in-__featu.patch
